ajax calls finally working an i can move session variable accross pages, so will be able to populate different pages with data as i move along.

--- a/src/main/webapp/WEB-INF/views/newhtml1.html
+++ b/src/main/webapp/WEB-INF/views/newhtml1.html
@@ -14,7 +14,7 @@
                 </div>
             </div>
         <!-- Script begins here -->
-        <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+        <script type="text/javascript" src="/CemeteryListingsWebApp/resources/js/jquery-1.11.1.min.js"></script>
         
         <script type="text/javascript">
            console.log('hi');
