--- a/src/main/webapp/WEB-INF/views/newhtml1.html
+++ b/src/main/webapp/WEB-INF/views/newhtml1.html
@@ -39,7 +39,7 @@
                         console.log(data);
                         //console.log(data[0]['contactName']);
                         
-                        /*for(var i = 0; i < data.length; i++) {
+                        for(var i = 0; i < data.length; i++) {
                             var obj = data[i];
                                 console.log(obj.id);
                                 console.log(obj.location.country);
@@ -53,7 +53,7 @@
 // building html objects here
 $(".siteContent").append("<div>" + 'cemetery ID : ' + obj.id + ' Location - Country : ' + obj.location.country + ' Cemetery Name : ' + obj.location.cemeteryName +"</div>" + "<br>"); 
                             
-        }*/
+        }
                         
                         //$(".data").append(data[0]['contactName']) + "hello";// write success in " "
                     },
