--- a/src/main/webapp/WEB-INF/views/createCemetery.html
+++ b/src/main/webapp/WEB-INF/views/createCemetery.html
@@ -1,16 +1,65 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
     <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+         
+        <title>Start Page</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <link rel="stylesheet" type="text/css" href="/CemeteryListingsWebApp/resources/css/index.css">
     </head>
     <body>
-        <div>TODO write content</div>
+        <div class="siteWrapper"> <!-- this is the beginning of site wrapper will contain the entire pages html -->       
+                <div class="siteContent">  <!-- this is the beginning of site content will contain all the content --> 
+                    <h1>Jquery Test</h1>
+                    <form style="width:20%; margin-left:10%;" id="data">
+	                    <input type="text" name="cemeteryName" id="cemeteryName" value="Cemetery Name" style="width:100%">
+	                    <input type="text" name="contactName" id="contactName" value="Contact Name" style="width:100%">
+	                    <input type="text" name="contactNumber" id="contactNumber" value="Contact Number" style="width:100%">
+	                    <input type="text" name="country" id="country" value="Country" style="width:100%">
+	                    <input type="text" name="district_state" id="district_state" value="District" style="width:100%">
+	                    <input type="text" name="locationOfCemetery" id="locationOfCemetery" value="Locatio Of Cemetery eg 12.06.12:45.63.89" style="width:100%">
+	                    <input type="text" name="province_state" id="province_state" value="Province/State" style="width:100%">
+	                    <input type="text" name="town" id="town" value="Town" style="width:100%">
+	                    <input type="button" name="post" value="create cemetery" id="createButton" style="margin-left: 35%">
+	                </form>
+                </div>
+            </div>
+        <!-- Script begins here -->
+        <script type="text/javascript" src="/CemeteryListingsWebApp/resources/js/jquery-1.11.1.min.js"></script>
+        
+        <script type="text/javascript">
+        	console.log('one love');
+
+        	$('#fuck').on('click', function() {
+        		console.log('sadhjashjd');
+        			$('#data').attr('style','visibility : visible !important');
+        	});
+        	//{"country":"America","province_State":"New Jersey","district_state":"Washington","town":"Marlboro","cemeteryName":"Palm Springs","locationOfCemetery":"12.06.12:45.63.89"},"contactName":"jack daniels","contactNumber":"0215917865"
+        	$('#createButton').on('click', function() {
+
+        	$.ajax({
+                    type: "POST", 
+                    url: "/CemeteryListingsWebApp/api/cemetery/create",
+                    data: JSON.stringify({"location":{"country":$('#country').val(),"province_State":$('#province_state').val(),"district_state":$('#district_state').val(),"town":$('#town').val(),"cemeteryName":$('#cemeteryName').val(),"locationOfCemetery":$('#locationOfCemetery').val()},"contactName":$('#contactName').val(),"contactNumber":$('#contactNumber').val()}),
+                    //data: JSON.stringify({ "contactName": 'mattcat', "contactNumber" : 123456789 , "ceme"}),// now data come in this function stringyfy is needed in order to turn string into json
+                    dataType: "JSON",
+                    contentType: "application/json",
+                    success: function (status, jqXHR) {
+
+                        alert("success");// write success in " "
+                    },
+
+                    error: function (jqXHR, status) {
+                        // error handler
+                        console.log(jqXHR);
+                        //alert('fail ' + status.code);
+                    }
+                 });
+
+			});
+
+        </script>
+       
     </body>
+   
+    
 </html>
