--- a/src/main/webapp/WEB-INF/views/login.html
+++ b/src/main/webapp/WEB-INF/views/login.html
@@ -1,16 +1,71 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+  <head>
+    <link rel="stylesheet" type="text/css" href="/CemeteryListingsWebApp/resources/css/blackAndWhite.css">
+    <link rel="stylesheet" type="text/css" href="/CemeteryListingsWebApp/resources/css/login.css">
+</head>
+
+<body class="siteWrapper">
+    <div class="pageHeader">
+        <a href="#" class="logo"><img src="/CemeteryListingsWebApp/resources/images/logo2.jpg"></a>
+                <ul class="navList" style="width : 100%">
+                    <li><a href="/CemeteryListingsWebApp/">Home</a></li>
+                </ul>   
+            </div>
+            <div class="dummyHeader"></div>
+    <div class="pageWrapper">
+        
+        <div class="contentWrapper">
+               <div class="loginForm">
+               		<form>
+               			<input type="text" id="username" class="loginInput">
+               			<input type="password" id="password" class="loginInput">
+               			<input type="button" id="sign-in" class="loginButton" value="Login">
+               		</form>
+               </div>
+        </div>
+    </div>
+    <div class="siteFooter"> 
+    </div>
+
+     <script type="text/javascript" src="/CemeteryListingsWebApp/resources/js/jquery-1.11.1.min.js"></script>
+        
+        <script type="text/javascript">
+        	console.log('hi');
+
+        	$('.loginButton').click(function() {
+        		console.log('i have been clicked');
+
+        		var username = $('#username').val();
+        		var password = $('#password').val();
+
+        		console.log(username);
+        		console.log(password);
+
+        		$.ajax({
+                    type: "POST", 
+                    url: "/CemeteryListingsWebApp/api/Subscriber/logon",
+                    data: {"user": username ,"pword": password},
+                    success: function (data, status, jqXHR) {
+                        //alert("success");// write success in " "
+                        console.log(data);
+                        console.log(jqXHR);
+                        console.log('yes');
+                    },
+
+                    error: function (data,jqXHR, status) {
+                        // error handler
+                        console.log('fail');
+                        console.log(jqXHR);
+                        console.log('fail ' + status.code);
+                    }
+                 });
+
+        		$('#username').val("");
+        		$('#password').val("");
+        	});
+
+        </script>
+
+</body>
 </html>
