--- a/src/main/webapp/WEB-INF/views/cemeteryListingsPage.html
+++ b/src/main/webapp/WEB-INF/views/cemeteryListingsPage.html
@@ -8,11 +8,12 @@
     <body class="siteWrapper">
          <div class="pageHeader">
         <a href="#" class="logo"><img src="/CemeteryListingsWebApp/resources/images/logo2.jpg"></a>
-                <ul class="navList">
+                <ul class="navList"  style="width : 100%">
                     <li><a href="/CemeteryListingsWebApp/">Home</a></li>
                     <li><a href="api/cemetery/cemeterylistings">Cemetery Listings</a></li>
                     <li><a href="#">Deceased Listings</a></li>
                     <li><a href="#">Contact US</a></li>
+                    <li><a href="/CemeteryListingsWebApp/api/auth/login" style="margin-left:10% !important;" class="user">Login</a></li>
                 </ul>   
 
                 <ul class="socialListNav">
@@ -89,7 +90,17 @@ $(".listings").append(' <tr>'+' <td><a href='+'"/CemeteryListingsWebApp/api/ceme
                     }
                  });
 		
+              var x = localStorage.username;
 
+                if($('.user') != null){
+                    if(x == ""){
+                        $('.user').text("Login");
+                    }else{
+
+                        $('.user').text(x);
+                    }
+                }
+        
         </script>
     </body>
 </html>
