changed subscriber class added the unique constraint for the purpose of unique usernames, but turned it to false, caused too many issues busy with the admin login and functional search

--- a/src/main/webapp/WEB-INF/views/adminLogin.html
+++ b/src/main/webapp/WEB-INF/views/adminLogin.html
@@ -21,7 +21,9 @@
         <div class="contentWrapper">
                <div class="loginForm" style="margin-top: 10%">
                		<form id="loginForm">
-                            <input class="loginInput" style="visibility: hidden">
+                            <br>
+                            <label class="loginLabel" id="adminID">Admin ID (required)</label>
+                            <input type="text" id="username" class="loginInput" name="cusername">
                             <label class="loginLabel" id="userLabel">Username (required)</label>
                             <input type="text" id="username" class="loginInput" name="cusername">
                             <label class="loginLabel" id="pwordLabel">Password (required)</label>
