--- a/src/main/webapp/WEB-INF/views/adminHome.html
+++ b/src/main/webapp/WEB-INF/views/adminHome.html
@@ -28,39 +28,53 @@
      <!--<script type="text/javascript" src="/CemeteryListingsWebApp/resources/js/jquery-1.11.1.min.js"></script> -->
         
         <script type="text/javascript">
-        	$.ajax({ // ajax call to retrieve all cemeteries json objects 
-                    type: "GET",
-                    url: "/CemeteryListingsWebApp/api/cemetery/show",
-                    dataType: "json",
-                    success: function (data) {
-                        console.log('success');
-                        console.log(data);
-                        //console.log(data[0]['contactName']);
-                        countData = data.length;
-                        for(var i = 0; i < data.length; i++) {
-                            var obj = data[i];
-                                console.log(obj.id);
-                                console.log(obj.location.country);
-                                console.log(obj.location.province_State);
-                                console.log(obj.location.district_state);
-                                console.log(obj.location.town);
-                                console.log(obj.location.cemeteryName);
-                                console.log(obj.location.locationOfCemetery);
-                                console.log(obj.contactName);
-                                console.log(obj.contactNumber);
-                            // building html objects here
-                            $(".listings").append(' <tr>'+' <td><a href='+'"/CemeteryListingsWebApp/api/cemetery/id/'+obj.id+'">' + '</a></td>' + '<td>Cemetery Name : ' + obj.location.cemeteryName + '</td>' + ' <td> Location - Country : ' + obj.location.country + 
-                                '</td>' + '<td> <button class="goToDetails" text="details" value='+obj.id+'>' + '</td>' + "</tr>"); 
+        	$.ajax({
+                                type: "GET", 
+                                url: "/CemeteryListingsWebApp/api/unpublishedListings/show",
+                                //data: {"name": nameSearch},
+                                success: function (data, status, jqXHR) {
+                                  console.log(data);
+                                  
+                                  countData = data.length;
+                                        for(var i = 0; i < data.length; i++) {
+                                            var obj = data[i];
+                                                console.log(obj.publishedListingID);
+                                                console.log(obj.firstName);
+                                                console.log(obj.surname);
+                                                console.log(obj.maidenName);
+                                                console.log(obj.dateOfDeath);
+                                                console.log(obj.graveNumber);
+                                                console.log(obj.imageOfBurialSite);
+                // building html objects here
+                                $(".listings").append(' <tr>'+' <td><a href='+'"/CemeteryListingsWebApp/api/cemetery/id/'+obj.publishedListingID+'">' + '</a></td>' + '<td> Name : ' + obj.firstName + '</td>' + ' <td> Last Name : ' + obj.surname + 
+                                    '</td>' + '</a></td>' + '<td>Mainden Name : ' + obj.maidenName + '</td>' +
+                                    '</td>' + '</a></td>' + '<td>Grave Number: ' + obj.graveNumber + '</td>' +
+                                    '</td>' + '</a></td>' + '<td>Date Of Birth: ' + obj.dateOfBirth + '</td>' +
+                                    '</td>' + '</a></td>' + '<td>Date Of Death: ' + obj.dateOfDeath + '</td>' +
+                                    '<td> <button class="goToDetails" text="details" value='+obj.id+'>' + '</td>' + "</tr>"); 
+ 
+                        }
+                        
+                        $('button').click(function() {
+				var htmlString = $( this ).eq();	
+                                console.log(htmlString);
+                                console.log(htmlString.context.value);
 
-                                    }
-                                 },
+                                localStorage.unpublishedID = htmlString.context.value;
 
-                                                error: function (jqXHR, status) {
-                                                    // error handler
-                                                    console.log(jqXHR);
-                                                    alert('fail' + status.code);
-                                                }
-                                             });
+
+                                                window.location="/CemeteryListingsWebApp/api/unpublishedListings/details";
+        	});
+                    },
+
+                    error: function (jqXHR, status) {
+                            // error handler
+                            console.log(jqXHR);
+                            alert('fail' + status.code);
+                            }
+            });
+            
+            
         </script>
 
 </body>
