--- a/src/main/webapp/WEB-INF/views/searchDetailsPage.html
+++ b/src/main/webapp/WEB-INF/views/searchDetailsPage.html
@@ -26,7 +26,7 @@
             <div class="dummyHeader"></div>
                 <div class="pageWrapper">        <!-- this is the beginning of site wrapper will contain the entire pages html -->       
                     <div class="siteContent">  
-                        <table class="listings" style="background-color : white"></table><!-- this is the beginning of site content will contain all the content --> 
+                        <table class="listings"></table><!-- this is the beginning of site content will contain all the content --> 
                         <!--<h1>Jquery Test</h1>
                         <input type="button" name="post" value="post" id="me"> -->
                     </div>
