--- a/src/main/webapp/WEB-INF/views/adminHome.html
+++ b/src/main/webapp/WEB-INF/views/adminHome.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="/CemeteryListingsWebApp/resources/css/blackAndWhite.css">
     <link rel="stylesheet" type="text/css" href="/CemeteryListingsWebApp/resources/css/listing-pages.css">
     <script type="text/javascript" src="/CemeteryListingsWebApp/resources/js/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="/CemeteryListingsWebApp/resources/js/scripts/script.js"></script>
@@ -12,13 +11,13 @@
     <div class="pageHeader">
         <a href="#" class="logo"><img src="/CemeteryListingsWebApp/resources/images/logo2.jpg"></a>
                 <ul class="navList" style="width : 100%">
-                    
+                   <li><a href="/CemeteryListingsWebApp/api/auth/loggedIn">Admin</a></li>
                 </ul>   
             </div>
             <div class="dummyHeader"></div>
     <div class="pageWrapper">
         
-        <div class="contentWrapper">
+        <div class="siteContent">
              <table class="listings"></table>
         </div>
     </div>
@@ -38,7 +37,7 @@
                                   countData = data.length;
                                         for(var i = 0; i < data.length; i++) {
                                             var obj = data[i];
-                                                console.log(obj.publishedListingID);
+                                                console.log(obj.requiresApprovalDeceasedListingID);
                                                 console.log(obj.firstName);
                                                 console.log(obj.surname);
                                                 console.log(obj.maidenName);
@@ -46,12 +45,12 @@
                                                 console.log(obj.graveNumber);
                                                 console.log(obj.imageOfBurialSite);
                 // building html objects here
-                                $(".listings").append(' <tr>'+' <td><a href='+'"/CemeteryListingsWebApp/api/cemetery/id/'+obj.publishedListingID+'">' + '</a></td>' + '<td> Name : ' + obj.firstName + '</td>' + ' <td> Last Name : ' + obj.surname + 
+                                $(".listings").append(' <tr>'+' <td><a href='+'"/CemeteryListingsWebApp/api/cemetery/id/'+obj.requiresApprovalDeceasedListingID+'">' + '</a></td>' + '<td> Name : ' + obj.firstName + '</td>' + ' <td> Last Name : ' + obj.surname + 
                                     '</td>' + '</a></td>' + '<td>Mainden Name : ' + obj.maidenName + '</td>' +
                                     '</td>' + '</a></td>' + '<td>Grave Number: ' + obj.graveNumber + '</td>' +
                                     '</td>' + '</a></td>' + '<td>Date Of Birth: ' + obj.dateOfBirth + '</td>' +
                                     '</td>' + '</a></td>' + '<td>Date Of Death: ' + obj.dateOfDeath + '</td>' +
-                                    '<td> <button class="goToDetails" text="details" value='+obj.id+'>' + '</td>' + "</tr>"); 
+                                    '<td> <button class="goToDetails" text="details" value='+obj.requiresApprovalDeceasedListingID+'>' + '</td>' + "</tr>"); 
  
                         }
                         
@@ -59,7 +58,7 @@
 				var htmlString = $( this ).eq();	
                                 console.log(htmlString);
                                 console.log(htmlString.context.value);
-
+                                
                                 localStorage.unpublishedID = htmlString.context.value;
 
 
