--- a/src/main/webapp/WEB-INF/views/unpublishedDetailsPage.html
+++ b/src/main/webapp/WEB-INF/views/unpublishedDetailsPage.html
@@ -1,23 +1,111 @@
 <!DOCTYPE html>
 <html>
-    <head>
-         
-        <title>Start Page</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" type="text/css" href="/CemeteryListingsWebApp/resources/css/index.css">
-    </head>
-    <body>
-        <div class="siteWrapper"> <!-- this is the beginning of site wrapper will contain the entire pages html -->       
-                <div class="siteContent">  <!-- this is the beginning of site content will contain all the content --> 
-                    <h1>Jquery Test</h1>
-                    <input type="button" name="post" value="post" id="me">
-                </div>
+  <head>
+    <link rel="stylesheet" type="text/css" href="/CemeteryListingsWebApp/resources/css/listing-pages.css">
+    <script type="text/javascript" src="/CemeteryListingsWebApp/resources/js/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="/CemeteryListingsWebApp/resources/js/scripts/script.js"></script>
+     <script type="text/javascript" src="/CemeteryListingsWebApp/resources/js/plugins/cookies-plugin/jquery.cookie.js"></script>
+</head>
+
+<body class="siteWrapper">
+    <div class="pageHeader">
+        <a href="#" class="logo"><img src="/CemeteryListingsWebApp/resources/images/logo2.jpg"></a>
+                <ul class="navList" style="width : 100%">
+                    <li><a href="/CemeteryListingsWebApp/api/auth/loggedIn">Admin</a></li>
+                </ul>   
             </div>
+            <div class="dummyHeader"></div>
+    <div class="pageWrapper">
+       
+        <div class="siteContent">
+             <h1> Unpublished Listings Details </h1>
+             <div class="details" style = "width : 100%; margin-left : 20%">
+                 <form style="width:20%; margin-left:10%;" id="data">
+                        <fieldset style="border:0">
+	                    <input disabled type="text" placeholder="First Name" name="firstName" id="firstName" style="width:100%">
+                        </fieldset>
+                        <fieldset style="border:0">
+	                    <input disabled type="text" name="lastName" id="lastName" placeholder="Last Name" style="width:100%">
+                        </fieldset>
+                        <fieldset style="border:0">
+	                    <input disabled type="text" name="maidenName" id="maidenName" placeholder="Maiden Name" style="width:100%">
+	                    </fieldset>
+                        <fieldset style="border:0">
+                        <input disabled type="text" name="gender" id="gender" placeholder="Gender" style="width:100%">
+	                    </fieldset>
+                        <fieldset style="border:0">
+                        <input disabled type="text" name="dateOfBirth" id="dateOfBirth" placeholder="Date Of Birth" style="width:100%">
+	                    </fieldset>
+                        <fieldset disabled style="border:0">
+                        <input type="text" name="dateOfDeath" id="dateOfDeath" placeholder="Date Of Death" style="width:100%">
+                        <textarea disabled name="graveInscription" id="graveInscription" placeholder="Grave Inscription" style="width:100%; height : auto">
+                        </textarea>
+                        </fieldset>
+                        <fieldset style="border:0">
+                        <input disabled type="text" name="lastKnownContactName" id="lastKnownContactName" placeholder="Last Known Contact Name" style="width:100%">
+                        </fieldset>
+                        <fieldset style="border:0">
+                        <input disabled type="text" name="lastKnownContactNumber" id="lastKnownContactNumber" placeholder="Last Known Contact Number" style="width:100%">
+                        </fieldset>
+                        <fieldset style="border:0">
+                        <input disabled type="text" name="cemeteryID" id="cemeteryID" placeholder="Cemtery ID" style="width:100%">
+                        </fieldset>
+                        <fieldset style="border:0">
+                        <textarea disabled name="otherNames" id="otherNames" placeholder="Other Names, seperated by a comma, end with a full stop" style="width:100%; height : auto">
+                        </textarea>
+                        </fieldset>
+                        <fieldset style="border:0">
+                        <input disabled type="text" name="imageOfBurialSite" id="imageOfBurialSite" placeholder="Image Of Burial Site" style="width:100%">
+                        </fieldset>
+                        <input type="button" name="publishListing" id="publishListing" value="Submit">
+                        <input type="button" name="deleteUnpublishedListing" id="deleteUnpublishedListing" value="Delete">
+	                </form>
+             </div>
+             <table class="listings"></table>
+        </div>
+    </div>
+    <div class="siteFooter"> 
+    </div>
         <!-- Script begins here -->
         <script type="text/javascript" src="/CemeteryListingsWebApp/resources/js/jquery-1.11.1.min.js"></script>
         
         <script type="text/javascript">
-          
+           var ID = localStorage.unpublishedID;
+          console.log(ID);
+
+          $.ajax({ // ajax call to retrieve all cemeteries json objects 
+                    type: "GET",
+                    url: "/CemeteryListingsWebApp/api/unpublishedListings/id/"+ID+"",
+                    dataType: "json",
+                    success: function (data) {
+                        console.log('success');
+                        console.log(data);
+            
+                            var obj = data;
+                                                console.log(obj.requiresApprovalDeceasedListingID);
+                                                console.log(obj.firstName);
+                                                console.log(obj.surname);
+                                                console.log(obj.maidenName);
+                                                console.log(obj.dateOfDeath);
+                                                console.log(obj.graveNumber);
+                                                console.log(obj.imageOfBurialSite);
+                // building html objects here
+                                $(".listings").append(' <tr>'+' <td><a href='+'"/CemeteryListingsWebApp/api/cemetery/id/'+obj.requiresApprovalDeceasedListingID+'">' + '</a></td>' + '<td> Name : ' + obj.firstName + '</td>' + ' <td> Last Name : ' + obj.surname + 
+                                    '</td>' + '</a></td>' + '<td>Mainden Name : ' + obj.maidenName + '</td>' +
+                                    '</td>' + '</a></td>' + '<td>Grave Number: ' + obj.graveNumber + '</td>' +
+                                    '</td>' + '</a></td>' + '<td>Date Of Birth: ' + obj.dateOfBirth + '</td>' +
+                                    '</td>' + '</a></td>' + '<td>Date Of Death: ' + obj.dateOfDeath + '</td>' +
+                                    '<td> <button class="post" text="details" value='+obj.requiresApprovalDeceasedListingID+'>' + '</td>' + "</tr>"); 
+                            
+                $('.post').click(function() {
+                    console.log('hello'); 
+                });
+	    }
+            
+                
+            });
+        
+        
 
         </script>
        
